--- a/Arena/templates/management/record_modal.html
+++ b/Arena/templates/management/record_modal.html
@@ -1,6 +1,5 @@
 <div class="col">
     <form id="record_form">
-        <h4>Record</h4>
         <div class="form-group row">
             <label for="videoOutputPrefix" class="col col-form-label">Folder Prefix</label>
             <div class="col-sm-7">
@@ -21,7 +20,7 @@
         </div>
         <div class="form-group row">
             <div class="col">
-                <button id="runRecordButton" type="submit" class="btn btn-primary mr-2">Run</button>
+                <button id="runRecordButton" type="button" class="btn btn-primary mr-2">Run</button>
                 <button id="stopRecord" type="button" class="btn btn-outline-danger mr-4">Stop Record
                 </button>
                 <button id="camerasInfo" type="button" class="btn btn-outline-info">Info</button>
