--- a/Arena/templates/management/stream.html
+++ b/Arena/templates/management/stream.html
@@ -9,9 +9,9 @@
 <!--                <option id="stream-option-{{cam}}" value="{{cam}}" disabled>{{cam}}</option>-->
 <!--            {% endfor %}-->
         </select>
-        <button id="streamButton" type="button" class="btn btn-lg btn-primary mr-2">Stream</button>
-        <button id="stopStream" type="button" class="btn btn-lg btn-outline-danger">Stop Stream</button>
-        <button id="captureImage" type="button" class="btn btn-lg btn-outline-info">Capture</button>
-        <button id="calibrate" type="button" class="btn btn-lg btn-outline-info">Calibrate</button>
+        <button id="streamButton" type="button" class="btn btn-primary mr-2">Stream</button>
+        <button id="stopStream" type="button" class="btn btn-outline-danger">Stop Stream</button>
+        <button id="captureImage" type="button" class="btn btn-outline-info">Capture</button>
+        <button id="calibrate" type="button" class="btn btn-outline-info">Calibrate</button>
     </div>
 </div>
