--- a/Arena/templates/management/middle_panel.html
+++ b/Arena/templates/management/middle_panel.html
@@ -1,13 +1,13 @@
 <div style="height: 100%">
-    <form class="bottom-border">
-        <h4>Cameras</h4>
+    <div class="bottom-border">
+        <form class="pl-2" style="padding-bottom: 0">
+        <h4 class="p-2">Cameras</h4>
         <div class="row">
             <div class="col-sm-auto">
                 <div class="row" style="height: 26px"></div>
                 {% for cam in cameras %}
                 <div class="row ml-4">
-                    <input class="form-check-input cam-checkbox" type="checkbox" value="{{cam}}" id="camera-{{cam}}"
-                           disabled>
+                    <input class="form-check-input cam-checkbox" type="checkbox" value="{{cam}}" id="camera-{{cam}}">
                     <label class="form-check-label cams-labels" for="camera-{{cam}}">{{cam}}</label>
                     <input id="toggle-{{cam}}" type="checkbox" checked data-toggle="toggle"
                            data-onstyle="success" data-offstyle="danger" data-size="xs" data-height="25">
@@ -37,9 +37,29 @@
         </div>
 
     </form>
+    </div>
 
-    <div class="row" style="margin-top: 1em">
-        <div class="col-md-7"></div>
+
+    <div class="row p-2">
+        <div class="col-md-8">
+            <div id="metrics-panel" class="row pt-2">
+                <div class="col-md-6" style="padding-right: 0">
+                    <div id="currentExperimentName"></div>
+                    <div id="currentBlockID"></div>
+                    <div id="openAppHostDiv"></div>
+                    <div id="temperatureValue"></div>
+                    <div id="gpuMetric"></div>
+                    <div id="cpuMetric"></div>
+                    <div id="memMetric"></div>
+                    <div id="storageMetric"></div>
+                    <div id="nStrikes"></div>
+                    <div id="nRewards"></div>
+                </div>
+                <div class="col" style="padding-right: 0; padding-left: 0">
+                    <pre id="procCPU"></pre>
+                </div>
+            </div>
+        </div>
         <div class="col">
             {% include "management/events.html" %}
         </div>
