--- a/Arena/templates/management/animal_id.html
+++ b/Arena/templates/management/animal_id.html
@@ -74,6 +74,24 @@
             <form>
                 <div class="modal-body">
 
+                    <div class="form-group row pr-3" id="exitHolePosition">
+                        <label for="exitHolePositionSelect" class="col col-form-label">Exit Hole Position</label>
+                        <div class="col">
+                            <select id="exitHolePositionSelect" class="form-control col">
+                                {% for val, label in config.get('holePositions', {}).items() %}
+                                <option value="{{val}}">{{label}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group row pr-3">
+                        <label for="rewardAnyTouchProb" class="col col-form-label">Any Touch Reward Probability</label>
+                        <div class="col-sm-5">
+                            <input type="number" step=0.01 max=1 min=0 class="form-control" id="rewardAnyTouchProb" value="0" required>
+                        </div>
+                    </div>
+
                     <div class="form-group row pr-3">
                         <label for="bugTypeSelect" class="col col-form-label">Bug Types</label>
                         <div class="col">
