--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -23,6 +23,12 @@
             <input id="isIdenticalBlocks" type="checkbox" class="form-control-sm">
         </div>
     </div>
+    <div class="form-group row pr-3" id="isTestDiv">
+        <label for="isTest" class="col col-form-label">Test Experiment</label>
+        <div class="col-sm-5">
+            <input id="isTest" type="checkbox" class="form-control-sm">
+        </div>
+    </div>
 
     <div id="accordion">
         {% for i in range(1, 20) %}
