--- a/Arena/templates/management/middle_panel.html
+++ b/Arena/templates/management/middle_panel.html
@@ -47,13 +47,13 @@
                     <div id="currentExperimentName"></div>
                     <div id="currentBlockID"></div>
                     <div id="openAppHostDiv"></div>
-                    <div id="temperatureValue"></div>
                     <div id="gpuMetric"></div>
                     <div id="cpuMetric"></div>
                     <div id="memMetric"></div>
                     <div id="storageMetric"></div>
                     <div id="nStrikes"></div>
                     <div id="nRewards"></div>
+                    <pre id="temperatureValue"></pre>
                 </div>
                 <div class="col" style="padding-right: 0; padding-left: 0">
                     <pre id="procCPU"></pre>
