--- a/Arena/templates/management/events.html
+++ b/Arena/templates/management/events.html
@@ -9,13 +9,13 @@
             <button id="led_light_off" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
         </div>
     </div>
-    <div class="row mb-1" id="heat-div">
-        <h7 class="col ml-2">Heat:</h7>
+    <div class="row mb-1" id="ir-div">
+        <h7 class="col ml-2">IR:</h7>
         <div class="col ml-5">
-            <button id="heat_light_on" type="button" class="btn btn-sm btn-primary">ON</button>
+            <button id="ir_light_on" type="button" class="btn btn-sm btn-primary">ON</button>
         </div>
         <div class="col ml-2">
-            <button id="heat_light_off" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
+            <button id="ir_light_off" type="button" class="btn btn-sm btn-outline-danger">OFF</button>
         </div>
     </div>
     <div class="row mb-1" id="display-div">
