--- a/Arena/templates/management/schedule_modal.html
+++ b/Arena/templates/management/schedule_modal.html
@@ -4,8 +4,33 @@
             <div class="col-sm-7">
                 <div class="form-group">
                     <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
+                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1" autocomplete="off" />
                         <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+                            <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="row">
+                    <div class="col-sm-1">
+                        <input id="isRepeatSchedule" type="checkbox">
+                    </div>
+                    <label for="isRepeatSchedule" class="col">Repeat</label>
+                </div>
+            </div>
+        </div>
+        <div class="row" id="repeatScheduleSection">
+            <div class="col-sm-3">
+                <label for="scheduleEveryMinutes">Every</label>
+                <input id="scheduleEveryMinutes" type="number" style="max-width: 100%; padding-left: 0.5em" value="0" autocomplete="off">
+            </div>
+            <div class="col-sm-7">
+                <label for="scheduleEveryMinutes">Until</label>
+                <div class="form-group" style="max-width: 100%">
+                    <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+                        <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker2" autocomplete="off"/>
+                        <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
                             <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                         </div>
                     </div>
