--- a/Arena/templates/management/experiment_modal.html
+++ b/Arena/templates/management/experiment_modal.html
@@ -83,7 +83,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group row pr-3 bugs-options{{i}}">
+                    <div class="form-group row pr-3 bugs-options{{i}}" id="bugSpeedDiv{{i}}">
                         <label for="bugSpeed{{i}}" class="col col-form-label">Bug Speed [cm/s]</label>
                         <div class="col-sm-5">
                             <input type="number" class="form-control" id="bugSpeed{{i}}" value="4">
